--- a/css/style.css
+++ b/css/style.css
@@ -134,3 +134,31 @@ body {
     margin: 0 auto;
     margin-top: 5px;
 }
+
+.quote {
+    background-color: #e5e7eb;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+
+.quote .container {
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+
+.quote .quote-text {
+    font-size: 36px;
+    font-weight: 300;
+    font-style: italic;
+    color: #1f2937;
+    margin-bottom: 0;
+    line-height: 1.2;
+}
+
+.quote .author {
+    margin-top: 10px;
+    align-self: flex-end;
+    font-size: 22px;
+    font-weight: 900;
+}
