--- a/css/style.css
+++ b/css/style.css
@@ -44,13 +44,13 @@ body {
     color:#f9faf8c1;
 }
 
-.text-content {
+.header .text-content {
     margin-top: 60px;
     margin-bottom: 180px;
     
 }
 
-.text-content h1 {
+.header .text-content h1 {
     font-size: 48px;
     font-weight: 900;
     color: #F9Faf8;
@@ -60,7 +60,7 @@ body {
     
 }
 
-.text-content p {
+.header .text-content p {
     max-width: 70%;
     line-height: 1.3;
     margin: 0;
@@ -71,7 +71,7 @@ body {
     color: #e5e7eb;
 }
 
-.text-content button {
+.header .text-content button {
     background-color: #3882F6;
     color: #fff;
     font-weight: 600;;
@@ -83,13 +83,13 @@ body {
 
 }
 
-.text-content button:hover {
+.header .text-content button:hover {
     background-color: #3881f6dd;
     color: rgba(255, 255, 255, 0.758);
     transition: 0.3s;
 }
 
-.image-content img {
+.header .image-content img {
     width: 500px;
     height: auto;
 }
@@ -162,3 +162,59 @@ body {
     font-size: 22px;
     font-weight: 900;
 }
+
+.cta {
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.cta .container {
+    display: flex;
+    background-color: #3882F6;
+    width: 70%;
+    border-radius: 10px;
+    padding: 50px 100px 50px 100px;
+    gap: 50px;
+}
+
+.cta .text-content {
+    width: 70%;
+    margin-right: auto;
+}
+
+.cta .text-content h3,
+.cta .text-content p {
+    color: #fff;
+    margin: 0;
+}
+
+.cta .text-content h3 {
+    font-size: 24px;
+    font-weight: bold;
+}
+
+.cta .text-content p {
+    font-size: 18px;
+    line-height: 1;
+}
+
+.cta button {
+    color: #fff;
+    background-color: #3882F6;
+    border: solid 2px #fff;
+    border-radius: 5px;
+    padding-left: 30px;
+    padding-right: 30px;
+    font-weight: bold;
+    cursor: pointer;
+    height: 40px;
+    align-self: center;
+    transition: 0.3s;
+}
+
+.cta button:hover {
+    background-color: #fff;
+    color: #3882F6;
+}
+
+
